# phd

./: .gitattributes  .gitignore  .gitmodules  README.md  TEST_RESULTS.md  Time for expectation values: 135[ms]  create_plots_for_all_data.ps1  data  el_ph.py  g_lambda=1.txt  g_lambda=1e-4.txt  g_no_coulomb.txt  lattice_vibration.py  make_plot.sh  matplotlibrc  merged_resolvents.json  pip_requirements.txt  project_test.py  pull_all.sh
boost_cmake_test/: CMakeLists.txt  run.sh  test.cpp
cpp/: omp_test.cpp  (+1 more)
cpp/ContinuumSystem/: CMakeLists.txt  Makefile  Makefile_old  batch_modes.sh  batch_modes_1.sh  batch_modes_2.sh  batch_modes_3.sh  batch_modes_4.sh  batch_modes_5.sh  benchmark.cpp  exec.sh  iterate.sh  rebatcher.sh  run_multiples.sh  screening_batch.sh  ul_batch.sh  ul_batch_1.sh  ul_batch_2.sh  ul_batch_3.sh
cpp/ContinuumSystem/auto_generated/: 0.01.config  0.01.slurm  0.02.config  0.02.slurm  0.03.config  0.03.slurm  0.04.config  0.04.slurm  0.05.config  0.05.slurm  0.06.config  0.06.slurm  0.07.config  0.07.slurm  0.08.config  0.08.slurm  0.09.config  0.09.slurm  0.1.config  0.1.slurm  0.2.config  0.2.slurm  0.3.config  0.3.slurm  0.4.config  0.4.slurm  0.5.config  0.5.slurm  0.6.config  0.6.slurm  0.7.config  0.7.slurm  0.8.config  0.8.slurm  0.9.config  0.9.slurm  1.2.config  1.2.slurm  1.4.config  1.4.slurm  (+51 more)
cpp/ContinuumSystem/auto_generated_4/: 0.00012.config  0.00012.slurm  0.00017.config  0.00017.slurm  0.00022.config  0.00022.slurm  0.00025.config  0.00025.slurm  0.00027.config  0.00027.slurm  0.00035.config  0.00035.slurm  0.00045.config  0.00045.slurm  0.00055.config  0.00055.slurm  0.0012.config  0.0012.slurm  0.0017.config  0.0017.slurm  0.0022.config  0.0022.slurm  0.0025.config  0.0025.slurm  0.0027.config  0.0027.slurm  0.0035.config  0.0035.slurm  0.0045.config  0.0045.slurm  0.0055.config  0.0055.slurm  0.012.config  0.012.slurm  0.017.config  0.017.slurm  0.022.config  0.022.slurm  0.025.config  0.025.slurm  (+24 more)
cpp/ContinuumSystem/auto_generated_5/: 0.00012.config  0.00012.slurm  0.00017.config  0.00017.slurm  0.00022.config  0.00022.slurm  0.00025.config  0.00025.slurm  0.00027.config  0.00027.slurm  0.00035.config  0.00035.slurm  0.00045.config  0.00045.slurm  0.00055.config  0.00055.slurm  0.0012.config  0.0012.slurm  0.0017.config  0.0017.slurm  0.0022.config  0.0022.slurm  0.0025.config  0.0025.slurm  0.0027.config  0.0027.slurm  0.0035.config  0.0035.slurm  0.0045.config  0.0045.slurm  0.0055.config  0.0055.slurm  0.012.config  0.012.slurm  0.017.config  0.017.slurm  0.022.config  0.022.slurm  0.025.config  0.025.slurm  (+24 more)
cpp/ContinuumSystem/auto_generated_ul_1/: 2.5.config  2.55.config  2.55.slurm  2.6.config  2.65.config  2.7.config  2.75.config  2.8.config  2.85.config  2.9.config  2.95.config  3.0.config  3.05.config  3.1.config  3.1.slurm  3.15.config  3.2.config  3.2.slurm  3.25.config  3.25.slurm  3.3.config  3.3.slurm  3.35.config  3.35.slurm  3.4.config  3.45.config  3.45.slurm
cpp/ContinuumSystem/auto_generated_ul_2/: 2.5.config  2.55.config  2.6.config  2.6.slurm  2.65.config  2.65.slurm  2.7.config  2.7.slurm  2.75.config  2.75.slurm  2.8.config  2.8.slurm  2.85.config  2.85.slurm  2.9.config  2.95.config  2.95.slurm  3.0.config  3.0.slurm  3.05.config  3.1.config  3.15.config  3.2.config  3.25.config  3.3.config  3.35.config  3.4.config  3.45.config
cpp/ContinuumSystem/auto_generated_ul_3/: 2.5.config  2.5.slurm  2.55.config  2.6.config  2.65.config  2.7.config  2.75.config  2.8.config  2.85.config  2.9.config  2.9.slurm  2.95.config  3.0.config  3.05.config  3.05.slurm  3.1.config  3.15.config  3.15.slurm  3.2.config  3.25.config  3.3.config  3.35.config  3.4.config  3.4.slurm  3.45.config
cpp/ContinuumSystem/build_cluster/: ContinuumSystem  Makefile  cmake_install.cmake
cpp/ContinuumSystem/build_ul/: ContinuumSystem  Makefile  cmake_install.cmake
cpp/ContinuumSystem/cmake/: ClusterCompilerFlags.cmake  DefaultCompilerFlags.cmake
cpp/ContinuumSystem/params/: cluster.config  cluster_2.config  cluster_3.config  for_auto.txt.save  params.config  test.config  ul_cluster.config
cpp/ContinuumSystem/slurm/: modes.slurm  modes_2.slurm  modes_3.slurm  ul_modes.slurm
cpp/ContinuumSystem/sources/: ContinuumSystem.cpp  NoScreeningIntegrals.cpp  SymbolicOperators  Utility
cpp/DWave/: CMakeLists.txt  Makefile  test_gap.py
cpp/DWave/cmake/: CascadelakeCompilerFlags.cmake  DefaultCompilerFlags.cmake  IcelakeCompilerFlags.cmake  MKLFlags.cmake  SelectClusterBuildOptions.cmake
cpp/DWave/params/: tc.config  test.config
cpp/DWave/slurm/: tc.slurm
cpp/DWave/sources/: DWave.cpp
cpp/FermionCommute/: CMakeLists.txt  Makefile  README.md
cpp/FermionCommute/sources/: Coefficient.cpp  Coefficient.hpp  FermionCommute.cpp  IndexWrapper.cpp  IndexWrapper.hpp  KroneckerDelta.hpp  KroneckerDeltaUtility.hpp  Momentum.cpp  Momentum.hpp  MomentumList.cpp  MomentumList.hpp  Operator.cpp  Operator.hpp  OperatorType.cpp  OperatorType.hpp  SymbolicSum.hpp  Term.cpp  Term.hpp  TermLoader.cpp  TermLoader.hpp  Wick.cpp  Wick.hpp  WickCleaner.cpp  WickOperator.cpp  WickOperator.hpp  WickOperatorTemplate.cpp  WickOperatorTemplate.hpp  WickSymmetry.cpp  WickSymmetry.hpp  WickTerm.cpp  WickTerm.hpp
cpp/FlowCommutators/: CMakeLists.txt  Makefile  main.tex  output.tex
cpp/FlowCommutators/sources/: FlowCommutators.cpp  coulomb_transform.hpp  coulomb_transform_second_order.hpp  phonon_first_order.hpp  phonon_higher_order.hpp
cpp/HubbardMeanField/: 2nd_multiple_params.sh  3rd_multiple_params.sh  CMakeLists.txt  Makecluster  Makefile  Makefile_old  Maketest  all_exec.sh  batch_cube.sh  batch_small_cube.sh  batch_small_square.sh  batch_square.sh  debug  debug.sh  dispserions.sh  exec.sh  exec_modes.sh  mkl_modes.sh  multiple_params.sh  slurmy.sh  slurmy_modes.sh  slurmy_phases.sh  slurmy_small_modes.sh  slurmy_small_modes2.sh  tester.sh  u_boundary.sh  workstation_exec.sh
cpp/HubbardMeanField/build_cluster/: Makefile  cmake_install.cmake
cpp/HubbardMeanField/cmake/: ClusterCompilerFlags.cmake  (+1 more)
cpp/Lindhard/: CMakeLists.txt  Makefile  README.md  plot.py
(+1015 files in other folders)
